clang/test/BSC/Negative/Trait/GenericTrait/func_not_implemented/func_not_implemented.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F<T> {
  T foo(This* this, T a);
  T bar(This* this);
};

struct S{
  int x;
};

int struct S::foo(struct S* this, int a) {
  return this->x;
}

_Impl _Trait F<int> for struct S; // expected-error {{function 'bar' in '_Trait F<int>' is not implemented for 'struct S'}}

